# Emergency-Response-System-

./: CMakeLists.txt  main.cpp
DOCS/: AL1-Recieve Emergency Call.txt  AL2-Incident Analysis.txt  AL3-Find Nearest Unit.txt  AL4-Dispatch Responder.txt  AL5-Incident Escalation.txt  AL6-Multi Agency Response.txt  UML Diagram.txt
include/: Ambulance.h  AnalyticsEngine.h  Caller.h  ControlCenter.h  DispatchEngine.h  DispatchStrategy.h  EmergencyCall.h  Enum.h  FireTruck.h  Incident.h  IncidentAnalyzer.h  Location.h  Logger.h  NearestUnitStrategy.h  PoliceUnit.h  Responder.h  Zone.h
src/: Ambulance.cpp  AnalyticsEngine.cpp  Caller.cpp  ControlCenter.cpp  DispatchEngine.cpp  EmergencyCall.cpp  FireTruck.cpp  Incident.cpp  IncidentAnalyzer.cpp  Location.cpp  Logger.cpp  NearestUnitStrategy.cpp  PoliceUnit.cpp  Responder.cpp  Zone.cpp
